show certain number of topics loaders depends on the screen size

--- a/src/components/Sections/TopicsSection/TopicsSection.module.scss
+++ b/src/components/Sections/TopicsSection/TopicsSection.module.scss
@@ -1,7 +1,10 @@
 .TopicsSection {
+  padding-bottom: 40px;
+
   .TopicHeader {
     display: flex;
     align-items: center;
+    margin-bottom: 40px;
 
     .title {
       margin-right: 40px;
