--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -4,7 +4,7 @@
   --dark-gray-color: #7d7d7d;
   --light-gray-color: #bbbbbb;
   --darkest-gray-color: #4c4e52;
-  --white-color: #ffffff;
+  --white-color: #fafafa;
   --orange-color: #ff591c;
   --green-color: #8bfa57;
   --blue-color: #2542fa;
