--- a/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
+++ b/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
@@ -34,6 +34,8 @@
     flex-direction: column;
 
     .FormWrapper {
+      display: flex;
+      flex-direction: column;
       margin-right: 120px;
 
       .PrivacyWrapper {
@@ -105,19 +107,18 @@
           }
         }
       }
+
+      .AddExampleButton {
+        margin-top: -41px;
+        align-self: center;
+      }
     }
 
     .SubmitButton {
       align-self: flex-end;
-      background: transparent;
-      color: var(--black-color);
       width: 193px;
       height: 37px;
-      border: 2px solid var(--blue-color);
-      border-radius: 10px;
-      font-size: var(--small-font-size);
-      outline: none;
-      cursor: pointer;
+      margin-top: 30px;
     }
   }
 }
