add hover effect to gray button

--- a/src/components/shared/CustomButton/CustomButton.module.scss
+++ b/src/components/shared/CustomButton/CustomButton.module.scss
@@ -32,5 +32,11 @@
     padding: 2px 10px;
     border-radius: 6px;
     border: 1px solid var(--dark-gray-color);
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      border-color: var(--valid-green-color);
+      color: var(--valid-green-color);
+    }
   }
 }
