--- a/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
+++ b/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
@@ -36,7 +36,6 @@
     .FormWrapper {
       display: flex;
       flex-direction: column;
-      margin-right: 120px;
 
       .PrivacyWrapper {
         label {
@@ -87,13 +86,13 @@
           display: flex;
           align-items: center;
 
-          div {
+          .Input {
             max-width: 480px;
             width: 100%;
           }
 
           .Divider {
-            max-width: 50px;
+            width: 50px;
             height: 2px;
             background: var(--light-gray-color);
 
