--- a/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
+++ b/src/components/Sections/CreateTopicSection/CreateTopicSection.module.scss
@@ -52,6 +52,18 @@
       }
 
       .ExamplesBlockWrapper {
+        .ExampleList {
+          li {
+            border-radius: 10px;
+            padding: 0 13px;
+            margin-left: -13px;
+
+            &.Dragging {
+              background: #ededed;
+            }
+          }
+        }
+
         h4 {
           margin-top: 20px;
           margin-bottom: 10px;
