add variable for transition

--- a/src/components/shared/CustomButton/CustomButton.module.scss
+++ b/src/components/shared/CustomButton/CustomButton.module.scss
@@ -17,7 +17,7 @@
 
   &.orange {
     border-color: var(--orange-color);
-    transition: all 0.3s ease-in-out;
+    transition: var(--transition);
 
     &:hover {
       background: var(--orange-color);
@@ -32,7 +32,7 @@
     padding: 2px 10px;
     border-radius: 6px;
     border: 1px solid var(--dark-gray-color);
-    transition: all 0.3s ease-in-out;
+    transition: var(--transition);
 
     &:hover {
       border-color: var(--valid-green-color);
