--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -15,4 +15,7 @@
   --small-font-size: 12px;
   --medium-font-size: 18px;
   --large-font-size: 24px;
+
+  /* default transition */
+  --transition: all 0.3s ease-in-out;
 }
