--- a/src/components/shared/FilterButton/FilterButton.module.scss
+++ b/src/components/shared/FilterButton/FilterButton.module.scss
@@ -1,10 +1,12 @@
 .FilterButton {
-  width: 18px;
-  height: 18px;
+  width: 26px;
+  height: 26px;
   margin: 0 10px;
+  padding: 4px;
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &:focus {
     span:nth-child(1) {
       background: var(--orange-color);
     }
