--- a/src/components/Sections/TopicsSection/TopicCard/TopicCard.module.scss
+++ b/src/components/Sections/TopicsSection/TopicCard/TopicCard.module.scss
@@ -36,11 +36,13 @@
     }
   }
 
-  &:hover {
+  &:hover,
+  &:focus-within {
     border-color: var(--orange-color);
 
     .AddButton {
       opacity: 1;
+      border-color: var(--orange-color);
     }
 
     .ButtonWrapper {
@@ -56,7 +58,7 @@
     right: -2px;
     bottom: -2px;
     height: 20px;
-    background: white;
+    background: #ffffff;
     text-align: center;
     border: 2px solid var(--dark-gray-color);
     border-radius: 0 0 20px 20px;
