make user menu tappable and add filter on hover and focus

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -36,6 +36,12 @@
       border-radius: 50%;
       overflow: hidden;
       cursor: pointer;
+      transition: var(--transition);
+
+      &:hover,
+      &:focus {
+        filter: brightness(0.85);
+      }
 
       img {
         width: 100%;
