add basic styles and ability to get addition className

--- a/src/components/shared/Dropdown/Dropdown.module.scss
+++ b/src/components/shared/Dropdown/Dropdown.module.scss
@@ -1,3 +1,9 @@
 .Dropdown {
-
+  position: absolute;
+  right: 0;
+  margin-top: 9px;
+  padding: 20px 30px;
+  border: 2px solid var(--light-gray-color);
+  border-radius: 20px 0 20px 20px;
+  overflow: hidden;
 }
