--- a/src/components/shared/Dropdown/Dropdown.module.scss
+++ b/src/components/shared/Dropdown/Dropdown.module.scss
@@ -2,8 +2,16 @@
   position: absolute;
   right: 0;
   margin-top: 9px;
-  padding: 20px 30px;
+  padding: 4px 8px;
+  background: var(--white-color);
   border: 2px solid var(--light-gray-color);
   border-radius: 20px 0 20px 20px;
   overflow: hidden;
+  z-index: 666;
+  transition: var(--transition);
+
+  &:hover,
+  &:focus-within {
+    border-color: var(--orange-color);
+  }
 }
