add dark mode toggler icon for user dropdown

--- a/src/components/layout/Header/UserDropdown/UserDropdownItem/UserDropdownItem.module.scss
+++ b/src/components/layout/Header/UserDropdown/UserDropdownItem/UserDropdownItem.module.scss
@@ -19,7 +19,9 @@
       height: 30px;
 
       g,
-      path {
+      path,
+      circle,
+      rect {
         transition: var(--transition);
       }
     }
