add styles to colorize right dark mode icon withing dark mode state

--- a/src/components/layout/Header/UserDropdown/UserDropdownItem/Icons/RightDarkModeIcon/RightDarkModeIcon.module.scss
+++ b/src/components/layout/Header/UserDropdown/UserDropdownItem/Icons/RightDarkModeIcon/RightDarkModeIcon.module.scss
@@ -1,20 +1,30 @@
 .RightDarkModeIcon {
 
-  &.Active {
-    .a {
-      fill: #794597;
-    }
-
-    .b {
-      fill: #ffefb5;
-    }
-  }
-
   .a {
-    fill: #ffefb5;
+    fill: none;
   }
 
   .b {
-    fill: #794597;
+    fill: none;
+  }
+
+  &.Active {
+    .a {
+      fill: #ffefb5;
+    }
+
+    .b {
+      fill: #794597;
+    }
+
+    &.DarkMode {
+      .a {
+        fill: #794597;
+      }
+
+      .b {
+        fill: #ffefb5;
+      }
+    }
   }
 }
