add back arrow icon and divider for nested dropdown and centered dropdown items text

--- a/src/components/layout/Header/UserDropdown/UserDropdown.module.scss
+++ b/src/components/layout/Header/UserDropdown/UserDropdown.module.scss
@@ -1,6 +1,13 @@
 .UserDropdown {
   width: 300px;
 
+  .ItemsDivider {
+    margin: 8px auto;
+    height: 2px;
+    background: var(--light-gray-color);
+    transition: var(--transition);
+  }
+
   .Menu {
     width: 100%;
     padding: 4px 8px;
