--- a/src/components/shared/Dropdown/Dropdown.module.scss
+++ b/src/components/shared/Dropdown/Dropdown.module.scss
@@ -12,5 +12,9 @@
   &:hover,
   &:focus-within {
     border-color: var(--orange-color);
+
+    div[data-divider] {
+      background: var(--orange-color);
+    }
   }
 }
